# ramadan-program-management-basira-org

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy-app.yml  deploy-postgres.yml
backend/: .env.example  .gitignore  .wranglerignore  alembic.ini  main.py  pyproject.toml  requirements.txt  requirements.txtbk  schema.sql  worker.py  wrangler.jsonc  wrangler.jsonc.template  wrangler.toml
backend/alembic/: README.md  env.py
backend/app/: __init__.py  config.py  d1_adapter.py  d1_initialization.py  database.py  database_cloudflare.py  dependencies.py  initialization.py
backend/app/models/: __init__.py  daily_card.py  halqa.py  site_settings.py  user.py
backend/app/routes/: __init__.py  admin.py  auth.py  participant.py  settings.py  supervisor.py  system.py
backend/app/schemas/: daily_card.py  halqa.py  settings.py  user.py
backend/app/utils/: email.py  email_validator.py  jwt_hs256.py  password_hash.py
backend/docs/: CHANGES_SUMMARY.md  D1_SETUP.md  FRONTEND_DEPLOYMENT.md  QUICKSTART.md
devops/: .env.example  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  docker-compose.postgres.yml
devops/postgresql/: 00-init-users.sh  init.sql  pg_hba.conf  postgresql.conf
frontend/: .env  .env.example  package-lock.json  package.json  wrangler.toml
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Pagination.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: AdminAnalyticsPage.js  AdminHalqasPage.js  AdminSettingsPage.js  AdminUsersPage.js  DailyCardPage.js  (+8 more)
(+3 files in other folders)
